# customer-service-GPT

./: .gitignore  README.md  booking_bot_entity_examples.yaml  duplex_bot_entity_examples.yaml  example_booking_bot.py  example_duplex_bot.py  example_form_bot.py  example_ner_chain.py  example_ner_chain_duplex.py  example_ner_chain_fine_tuned.py  popcorn.py  pyproject.toml
.github/workflows/: ci.yaml
examples/: example_form_bot.py
examples/appointment_booking/: booking_bot_entity_examples.yaml  booking_bot_entity_training_data.yaml  convos.md  duplex_bot_entity_examples.yaml  example_booking_bot.py  example_duplex_bot.py
examples/multiple/: bot.py  ner_data.yaml  other.py  simple_form_process.py
examples/ner/: example_ner_chain.py  example_ner_chain_duplex.py
lib/: bot.py  conversation_memory.py  logger_config.py  utils.py
lib/ner/: fine_tuning.py  ner_chain.py  ner_prompt_template.py
lib/ner/entities/: basic_entities.py  datetime_entity.py
lib/process/: process_chain.py  process_prompt_template.jinja2  process_prompt_template.py  schemas.py  validation_chain.py
test/: test_process_prompt_template.py  test_utils.py  test_validation_chain.py
tests/: test_ner_prompt_template.py  test_process_prompt_template.py  test_validation_chain.py
